--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -9,7 +9,7 @@
 		<h1>Adicionar notícia</h1>
 		<br />
 
-		<form action="noticas/salvar" method="POST" >
+		<form action="/noticias/salvar" method="POST" >
 			<label>Título</label>
 			<input type="text" id="titulo" name="titulo" placeholder="Título da notícia" />
 			<br />
